# redstone-move-connector

./: .gitignore  Move.toml  README.md  deploy.sh  initialize.sh
client-rs/: Cargo.toml  test-process-redstone-payload.sh  test-view-get-price.sh
client-rs/src/: constants.rs  main.rs
sources/: conv.move  crypto.move  median.move  redstone_move_connector.move
tests/: redstone_move_connector_tests.move
